# blueprints

./: README.md  justfile
.scripts/: add-ruleset.sh
blueprints/python/: justfile  pyproject.toml
blueprints/python/.github/: FUNDING.yaml  dependabot.yaml
blueprints/python/.github/workflows/: publish.yaml  pull-request.yaml
blueprints/snap/: README.md  spread.yaml
blueprints/snap/.github/workflows/: update.yml
blueprints/snap/snap/: snapcraft.yaml
blueprints/snap/spread/general/version/: task.yaml
