[project]
name = "{{project_name}}"
version = "0.1.0"
description = "{{project_description}}"
authors = [
    {name = "Luca Bello", email = "lusgabello@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "vulture",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "actionlint-py",
    "uv-secure",
]

[project.urls]
Homepage = "https://github.com/lucabello/{{project_name}}"
Documentation = "https://github.com/lucabello/{{project_name}}"
Repository = "https://github.com/lucabello/{{project_name}}"
Issues = "https://github.com/lucabello/{{project_name}}/issues"
Changelog = "https://github.com/lucabello/{{project_name}}/releases"


# Building and publishing
[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Tools configuration
[tool.ruff]
line-length = 99

[tool.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = ".git,build,venv*"
ignore-words-list = "assertIn"

[tool.vulture]
min_confidence = 80
